--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,80 @@ ul {
     padding: 0;
 }
 
+/* สไตล์ Post-it */
+.post-it {
+    position: absolute;
+    width: 150px;
+    padding: 10px;
+    background-color: #ffef96;
+    border-radius: 8px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+    font-size: 1em;
+    color: #333;
+    transform: rotate(calc(-5deg + 10deg * random()));
+    text-align: center;
+    font-family: 'IBM Plex Sans Thai', sans-serif;
+    animation: float 5s ease-in-out infinite alternate;
+}
+
+/* Animation float effect */
+@keyframes float {
+    from {
+        transform: translateY(0);
+    }
+
+    to {
+        transform: translateY(-10px);
+    }
+}
+
+/* สไตล์ของ Lightbox Alert */
+.alert-lightbox {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    border-radius: 8px;
+    display: none;
+    width: 80%;
+    max-width: 70%;
+    text-align: center;
+}
+
+.alert-lightbox h3 {
+    font-size: 1.2em;
+}
+
+.blackText {
+    font-size: 1.2em;
+    color: #000 !important;
+}
+
+.fixed-bottom-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #ffffff;
+    color: #000;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+}
+
+/* เอฟเฟกต์เมื่อ hover ปุ่ม */
+.fixed-bottom-button:hover {
+    background-color: #0056b3;
+}
+
 @media only screen and (max-width: 768px) {
 
     /* For mobile phones: */
@@ -211,7 +285,7 @@ ul {
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         transition: background-color 0.3s ease;
     }
-    
+
     /* เอฟเฟกต์เมื่อ hover ปุ่ม */
     .fixed-bottom-button:hover {
         background-color: #0056b3;
@@ -220,5 +294,27 @@ ul {
     input::placeholder {
         color: rgb(255, 255, 255);
         opacity: 0.5;
-      }
+    }
+
+    .likeli li {
+        padding: 10px;
+        margin: 5px 0;
+        background-color: #fff;
+        color: #000;
+        border-radius: 5px;
+        opacity: 0;
+        transform: translateY(20px);
+        animation: bubble 0.6s ease forwards;
+    }
+
+    .needli li {
+        padding: 10px;
+        margin: 5px 0;
+        background-color: #fff;
+        color: #000;
+        border-radius: 5px;
+        opacity: 0;
+        transform: translateY(20px);
+        animation: bubble 0.6s ease forwards;
+    }
 }
